fix message time visibility

--- a/src/app/chat/component/chat-message/chat-message.component.scss
+++ b/src/app/chat/component/chat-message/chat-message.component.scss
@@ -77,6 +77,7 @@
   align-items: end;
   align-self: flex-start;
   gap: 5px;
+  max-width: 100%;
 }
 
 .message.own .msg-time-box {
